package com.yu_pharm.dao;

public enum role {
	Viewer
	Customer
	Pharmacist
	Doctor
	Admin
	SuperAdmin
	}
