package com.yu_pharm.model.drug;

import java.util.List;

public interface Drugs {

	Drug create();

	List<Drug> all();
}
